# flet_env

./: .gitignore  Makefile  README.md  pyproject.toml
app/: Dockerfile  main.py
app/components/: chat.py
app/pages/: chat_page.py  top_page.py
doc/: Fly.io.md  GCP.md  REF.md
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.sample  variables.tf
